<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
         <variable
            name="viewModel"
            type="com.ibnsina.notes.features.login.LoginViewModel" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <TextView
            android:id="@+id/hello_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="25dp"
            android:fontFamily="@font/avenir_haevy"
            android:gravity="center"
            android:text="@string/welcome"
            android:textColor="#042C5C"
            android:textSize="32sp"
            app:layout_constraintBottom_toTopOf="@+id/phone_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.45" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/phone_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:theme="@style/NotesTask.text_input"
            app:layout_constraintBottom_toTopOf="@+id/guideline"
            android:layout_marginBottom="30dp"
            android:layout_marginStart="20dp"
            app:hintTextColor="#77869E"
            app:endIconMode="custom"
            android:hint="@string/email"
            app:endIconCheckable="true"
            app:prefixTextColor="#77869E"
            app:placeholderTextColor="#77869E"
            android:layout_marginEnd="20dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/mobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:fontFamily="@font/avenir_medium"
                android:gravity="start|center"
                android:inputType="text"
                tools:text="01093475878"
                android:text="test@ibnsina.com"
                android:imeOptions="actionNext"
                android:textColor="#042C5C"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/phone_layout"
            android:layout_marginBottom="30dp"
            android:theme="@style/NotesTask.text_input"
            android:layout_marginTop="8dp"
            app:placeholderTextColor="#77869E"
            app:hintTextColor="#77869E"
            android:hint="@string/password"
            app:endIconMode="password_toggle"
            android:imeOptions="actionDone"
            app:endIconDrawable="@drawable/ic_active_input_transparent"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:fontFamily="@font/avenir_roman"
                android:gravity="start|center"
                android:inputType="textPassword"
                android:imeOptions="actionDone"
                android:maxLines="1"
                android:lines="1"
                android:singleLine="true"
                android:textColor="#77869E"
                tools:text="123456"
                android:text="123456"
                android:textColorHint="#042C5C"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>
        <TextView
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/login"
            android:textColor="@color/white"
            android:gravity="center"
            android:onClick="@{() -> viewModel.login(mobile.getText().toString(),password.getText().toString())}"
            android:layout_marginTop="30dp"
            android:textSize="14sp"
            android:fontFamily="@font/avenir_haevy"
            app:layout_constraintTop_toBottomOf="@+id/password_layout"
            android:background="@drawable/ic_login"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>